# template-nrf52

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pm_static_madi_nrf52840.yml  sysbuild.cmake  sysbuild.conf  sysbuild_signing.cmake
.github/: codechecker.baseline  memsize.baseline
.github/workflows/: ci.yml  esp-idf.yml  zephyr.yml
include/: console_sync.h  logging.h  metrics.def  periph.h  pinmap.h  version.h
ports/esp-idf/: board.c  build.cmake  dfu.c  gpio.c  partitions_16mb.csv  partitions_8mb.csv  periph.c  pinmap.c  sdkconfig.defaults  start.c
ports/esp-idf/boards/jc8012wp4a1/: pinmap.h  sdkconfig.defaults
ports/esp-idf/boards/madi_esp32s3/: pinmap.h  sdkconfig.defaults
ports/esp-idf/components/remote_wifi_host/: CMakeLists.txt  idf_component.yml  remote_wifi_host_stub.c
ports/esp-idf/mcumgr/: esp_smp_transport.h  esp_smp_uart.c
ports/mcumgr/: CMakeLists.txt  mcumgr_config.h
ports/nrf52/: CMakeLists.txt  board.c  gpio.c  madi.h  pinmap.h  platform.mk
ports/zephyr/: board.c  gpio.c  logging.c  mcuboot.conf  prj.conf
ports/zephyr/boards/nordic/madi_nrf52840/: Kconfig.defconfig  Kconfig.madi_nrf52840  board.cmake  board.yml  madi_nrf52840-pinctrl.dtsi  madi_nrf52840.dts  madi_nrf52840_defconfig
projects/: app.cmake  app.mk  external.cmake  sources.cmake  version.cmake  warnings.cmake
projects/arch/arm/: cm3.cmake  cm3.mk  cm4f.cmake  cm4f.mk  common.cmake
src/: ble_adv.c  board.c  console_sync.c  logger.c  logging.c  main.c
sysbuild/: CMakeLists.txt
sysbuild/mcuboot/: app.overlay  prj.conf
sysbuild/mcuboot/boards/: madi_nrf52840.conf
